--- a/grafico_comparativo_grupos.ipynb
+++ b/grafico_comparativo_grupos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5cbc168f",
+   "id": "7b883825",
    "metadata": {},
    "source": [
     "Para a construçao do grafico foram considerados os grupos correspondentes a cada coluna e a quantidade de vezes que ele obteve o maior resultado dentre os demais (em percentual). "
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "06edddeb",
+   "id": "8b6edd18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "11251eb3",
+   "execution_count": 19,
+   "id": "51e6b536",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculo percentuais \n",
+    "total_maiores_resultados = 24 # considerando quantidade de métricas e conjuntos de dados \n",
+    "percentual_monoliticos = round(13/total_maiores_resultados,3)*100\n",
+    "percentual_a = 0.0\n",
+    "percentual_b = round(1/total_maiores_resultados,3)*100\n",
+    "percentual_c = round(3/total_maiores_resultados,3)*100\n",
+    "percentual_d = round(7/total_maiores_resultados,3)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4a97e9dd",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +58,7 @@
    "source": [
     "cores=['lightgray','lightslategray', 'gray','slategray', 'darkslategray']\n",
     "grupo = ['Monolítico','A', 'B', 'C', 'D']\n",
-    "percentual=[54.2,0.0,4.2,12.5,29.2]\n",
+    "percentual=[percentual_monoliticos,percentual_a,percentual_b,percentual_c,percentual_d]\n",
     "plt.bar(grupo,percentual,color=cores)\n",
     "plt.xlabel('Grupo')\n",
     "plt.ylabel('Percentual de maiores resultados (%)')\n",
