--- a/grafico_comparativo_grupos.ipynb
+++ b/grafico_comparativo_grupos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7b883825",
+   "id": "ee358b60",
    "metadata": {},
    "source": [
     "Para a construçao do grafico foram considerados os grupos correspondentes a cada coluna e a quantidade de vezes que ele obteve o maior resultado dentre os demais (em percentual). "
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8b6edd18",
+   "id": "5d4b1390",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "51e6b536",
+   "execution_count": 21,
+   "id": "21db2ff9",
    "metadata": {},
    "outputs": [],
    "source": [
     "#calculo percentuais \n",
     "total_maiores_resultados = 24 # considerando quantidade de métricas e conjuntos de dados \n",
-    "percentual_monoliticos = round(13/total_maiores_resultados,3)*100\n",
+    "percentual_monolitico = round(13/total_maiores_resultados,3)*100\n",
     "percentual_a = 0.0\n",
     "percentual_b = round(1/total_maiores_resultados,3)*100\n",
     "percentual_c = round(3/total_maiores_resultados,3)*100\n",
@@ -38,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "4a97e9dd",
+   "execution_count": 22,
+   "id": "df45577e",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
    "source": [
     "cores=['lightgray','lightslategray', 'gray','slategray', 'darkslategray']\n",
     "grupo = ['Monolítico','A', 'B', 'C', 'D']\n",
-    "percentual=[percentual_monoliticos,percentual_a,percentual_b,percentual_c,percentual_d]\n",
+    "percentual=[percentual_monolitico,percentual_a,percentual_b,percentual_c,percentual_d]\n",
     "plt.bar(grupo,percentual,color=cores)\n",
     "plt.xlabel('Grupo')\n",
     "plt.ylabel('Percentual de maiores resultados (%)')\n",
