--- a/grafico_comparativo_grupos.ipynb
+++ b/grafico_comparativo_grupos.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ee358b60",
+   "id": "82bd00b4",
    "metadata": {},
    "source": [
-    "Para a construçao do grafico foram considerados os grupos correspondentes a cada coluna e a quantidade de vezes que ele obteve o maior resultado dentre os demais (em percentual). "
+    "Para a construção do gráfico foram considerados os grupos correspondentes a cada coluna e a quantidade de vezes que ele obteve o maior resultado dentre os demais (em percentual). "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5d4b1390",
+   "id": "1db6dac7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "21db2ff9",
+   "id": "5f090d39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "df45577e",
+   "id": "1c61758c",
    "metadata": {},
    "outputs": [
     {
