Update and rename analise_dados_liar.ipynb to análise_exploratória/análise_dados_senti.ipynb

--- a/análise_exploratória/análise_dados_senti.ipynb
+++ b/análise_exploratória/análise_dados_senti.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "# analise exploratória do dataset \n",
+    "# análise exploratória do dataset \n",
     "\n",
     "# importação das bibliotecas\n",
     "\n",
